# VisionStream

./: .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
app/: LocalDisplayApp.cpp  PushStreamApp.cpp
include/capture/: V4L2Capture.hpp
include/processor/: OpenCVProcessor.hpp
include/queue/: ThreadSafeQueue.hpp
include/streamer/: RTMPStreamer.hpp
src/capture/: V4L2Capture.cpp
src/processor/: OpenCVProcessor.cpp
src/streamer/: RTMPStreamer.cpp
tests/: CMakeLists.txt  test_ar.cpp  test_v4l2.cpp
